# tolaria

./: .codescene-thresholds  .gitignore  AGENTS.md  package.json  pnpm-lock.yaml
.chunk/: install-playwright-browsers.mjs
.codacy/: cli.sh  codacy.yaml
.codacy/tools-configs/: semgrep.yaml
.github/workflows/: ci.yml
.husky/: pre-push
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  GETTING-STARTED.md
docs/adr/: 0155-html-block-source-edits-use-raw-editor.md  0163-agent-owned-model-selection.md  0169-native-macos-fullscreen-escape-routing.md  README.md
mcp-server/: package-lock.json
release-notes/: v2026-05-21.md
scripts/: codacy-gate-lib.mjs  codacy-gate-lib.test.mjs  codacy-gate.mjs  codacy-sarif.mjs  editor-performance-benchmark.mjs
site/.vitepress/: config.ts
src/: App.tsx  indexBootDiagnostics.test.ts  main.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_agents.rs  antigravity_cli.rs  antigravity_config.rs  claude_cli.rs  claude_invocation.rs  cli_agent_runtime.rs  codex_cli.rs  copilot_cli.rs  hermes_cli.rs  kiro_cli.rs  kiro_discovery.rs  lib.rs  macos_fullscreen_escape.rs  menu.rs  opencode_cli.rs  opencode_config.rs  pi_cli.rs  pi_config.rs  settings.rs
src-tauri/src/cli_agent_runtime/: windows_cmd_shim.rs
src-tauri/src/commands/: ai.rs  git.rs  git_clone.rs  git_connect.rs  pdf_export.rs
src-tauri/src/git/: clone.rs  dates.rs  mod.rs  remote_url.rs
src-tauri/src/mcp/: paths.rs
src-tauri/src/vault/: cache.rs
src/components/: AiAgentModelPicker.tsx  AiAgentsOnboardingPrompt.tsx  AiPanelChrome.tsx  Sidebar.tsx  (+51 more)
(+114 files in other folders)
